
SVN
-------------------------------

XML:   Resolved issue CASTOR-1629 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for XML schema type 'unsigned' to XML code generator.
       Details: http://jira.codehaus.org/browse/CASTOR-1629
       (Werner - 20061017)

XML:   Resolved issue CASTOR-1600 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with incorrect model group naming (and numbering) scheme.
       Details: http://jira.codehaus.org/browse/CASTOR-1600
       (Werner - 20061017)

XML:   Resolved issue CASTOR-1627 using contribution from Edward Kuns [edward.kuns@aspect.com]
       For directory trees, set the test suite name to the directory name.
       Details: http://jira.codehaus.org/browse/CASTOR-1627
       (Edward - 20061016)

XML:   Resolved issue CASTOR-1586 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Fixed error loading mapping whem migrating from 1.0.1 to 1.0.3.
       Details: http://jira.codehaus.org/browse/CASTOR-1586
       (Ralf - 20061016)

XML:   Resolved issue CASTOR-1626 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added Code generation sample to HTML documentation.
       Details: http://jira.codehaus.org/browse/CASTOR-1626
       (Werner - 20061016)

JDO:   Resolved issue CASTOR-1621 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Backported Castor to Java 1.3 compatibility: JDBC 3.0.
       Details: http://jira.codehaus.org/browse/CASTOR-1621
       (Ralf - 20061016)

XML:   Resolved issue CASTOR-1625 using contribution from Rainer Montag [rmontag@hrzpub.tu-darmstadt.de]
       Added checks to DateTimeBase.setCentury() for (invalid) year 0.
       Details: http://jira.codehaus.org/browse/CASTOR-1625
       (Werner - 20061016)

XML:   Resolved issue CASTOR-385 using contribution from Edward Kuns [edward.kuns@aspect.com]