@@ -70,9 +70,29 @@
                 </code>
            </summary>
             <bugs>
+                <bug id="1630" tool="jira">
+                    <description>
+		                Added support for XML schema type 'unsignedShort' to XML code generator.
+                    </description>
+                    <contributor>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </reporter>
+                    <type>Enh.</type>
+                    <module>XML</module>
+                    <date>20061017</date>
+                </bug>
                 <bug id="1629" tool="jira">
                     <description>
-		                Added support for XML schema type 'unsigned' to XML code generator.
+		                Added support for XML schema type 'unsignedInt' to XML code generator.
                     </description>
                     <contributor>
                         <name>Werner Guttmann</name>
